Fix(Issue#10+...) : z-index 조정, 그 외 기타 조정
불필요 태그 제거
header 구조 일부 수정

--- a/PageData/base.css
+++ b/PageData/base.css
@@ -52,7 +52,6 @@ body {
     height: auto;
     min-height: 100%;
     min-width: 100%;
-    padding-bottom: 3vh;
 }
 
 main {
